Add Scala and Clojure basic support.

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "bundle/AutoTag"]
 	path = bundle/AutoTag
 	url = git@github.com:vim-scripts/AutoTag.git
+[submodule "bundle/vim-slime"]
+	path = bundle/vim-slime
+	url = git@github.com:jpalardy/vim-slime.git
